--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   },
   "author": {
     "name": "Mike Diarmid",
-    "email": "mike.diarmid@teamfa.com",
+    "email": "mike.diarmid@gmail.com",
     "url": "http://github.com/Salakar/"
   },
-  "license": "MIT",
+  "license": "APACHE-2.0",
   "bugs": {
     "url": "https://github.com/Salakar/redis-writable/issues"
   },
