--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "scripts": {
     "test": "istanbul cover --report lcov _mocha",
+    "posttest": "npm run coveralls",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "benchmark": "node benchmark/"
   },
